Setup/db (#34)
* add DB setup spring orm

* implement base thesis service logic with db

* finish thesis-service implementation using Spring ORM, add simple Unit Tests

* small tweaks, add missing dependency

* add flyway dependency, match restClient build process of scraping-service to thesis-service

* fix wrong datatype in thesis-service ThesisCoordinationServiceTest.java

* add flyway migration with .sql initialization script, change spring ddl mode to validate

* add doc explaining potential migration to message-queue-based execution for scrapes

* fix copilot suggestions regarding non deterministic scrape run ids, ddl-auto configuration for tests, source_url for thesis proposal fail on null

* better transactional area for scrape run logging/execution flow, make advisor email mandatory, lastScrapedAt is updated automatically upon success log, input normalization

* add dto suffix to distinguish between dtos and jpa entities (auto generated), implement /source_endpoints endpoint, more thorough null verifications

* refactor validation to check all thesis and advisor details before triggering REQUIRES_NEW sync, request rejected if advisor missing name or email, need finishedAt in both services, update tests

* big refactor, add frontend facing endpoints and test coverage (no integration tests yet)

* not much

* remove error message from global handler to hide internal logic, add query.distinct(true) for many-to-many collection joins, callVectorSearch now returns empty list for no matches, null for error

* add missing fields in thesis service request endpoint implementations

* better validation, remove unused imports

* add URL envs, change scraping from per chair basis to per endpoint basis

* finish refactor of chair based replacement to endpoint based replacement

* fix docker compose, formatting
